Update slh.json with txʷəlšucid

--- a/assets/minecraft/lang/slh.json
+++ b/assets/minecraft/lang/slh.json
@@ -4270,8 +4270,8 @@
   "key.swapOffhand": "Swap Item With Offhand",
   "key.togglePerspective": "Toggle Perspective",
   "key.use": "Use Item/Place Block",
-  "language.code": "lut",
-  "language.name": "dxʷləšucid",
+  "language.code": "slh",
+  "language.name": "txʷəlšucid",
   "language.region": "liɬʔal ti x̌ʷəlč",
   "lanServer.otherPlayers": "Settings for Other Players",
   "lanServer.port": "Port Number",
