--- a/assets/minecraft/lang/lut.json
+++ b/assets/minecraft/lang/lut.json
@@ -2793,8 +2793,8 @@
   "datapackFailure.title": "Errors in currently selected data packs prevented the world from loading.\nYou can either try to load it with only the vanilla data pack (\"safe mode\"), or go back to the title screen and fix it manually.",
   "death.attack.anvil": "%1$s was squashed by a falling anvil",
   "death.attack.anvil.player": "%1$s was squashed by a falling anvil whilst fighting %2$s",
-  "death.attack.arrow": "%1$s was shot by %2$s",
-  "death.attack.arrow.item": "%1$s was shot by %2$s using %3$s",
+  "death.attack.arrow": "ʔut̕uc̓utəb %1$s ʔə %2$s",
+  "death.attack.arrow.item": "ʔut̕ucutəb %1$s ʔə ti %2$s. %3$s ti dəxʷut̕uc̓s",
   "death.attack.badRespawnPoint.link": "Intentional Game Design",
   "death.attack.badRespawnPoint.message": "%1$s was killed by %2$s",
   "death.attack.cactus": "%1$s was pricked to death",
@@ -2894,7 +2894,7 @@
   "deathScreen.respawn": "Respawn",
   "deathScreen.score": "Score",
   "deathScreen.spectate": "Spectate World",
-  "deathScreen.title": "You Died!",
+  "deathScreen.title": "ʔuʔatəbəd čəxʷ!",
   "deathScreen.title.hardcore": "Game Over!",
   "deathScreen.titleScreen": "Title Screen",
   "debug.advanced_tooltips.help": "F3 + H = Advanced tooltips",
@@ -5412,7 +5412,7 @@
   "subtitles.block.frogspawn.hatch": "Tadpole hatches",
   "subtitles.block.furnace.fire_crackle": "Furnace crackles",
   "subtitles.block.generic.break": "Block broken",
-  "subtitles.block.generic.footsteps": "Footsteps",
+  "subtitles.block.generic.footsteps": "sx̌ədx̌ədšadəb",
   "subtitles.block.generic.hit": "Block breaking",
   "subtitles.block.generic.place": "Block placed",
   "subtitles.block.grindstone.use": "Grindstone used",
@@ -5465,28 +5465,28 @@
   "subtitles.chiseled_bookshelf.take": "Book taken",
   "subtitles.chiseled_bookshelf.take_enchanted": "Enchanted Book taken",
   "subtitles.enchant.thorns.hit": "Thorns prick",
-  "subtitles.entity.allay.ambient_with_item": "ləgʷəč̓ədəxʷ ti Allay",
-  "subtitles.entity.allay.ambient_without_item": "ʔəsx̌aƛ̕txʷəxʷ ti Allay",
-  "subtitles.entity.allay.death": "yuyəbiləxʷ ti Allay",
-  "subtitles.entity.allay.hurt": "baʔkʷdubəxʷ ti Allay",
-  "subtitles.entity.allay.item_given": "x̌ayəb ti Allay",
+  "subtitles.entity.allay.ambient_with_item": "ʔuləgʷəč̓əd ti Allay",
+  "subtitles.entity.allay.ambient_without_item": "ʔəsx̌aƛ̕txʷ ti Allay",
+  "subtitles.entity.allay.death": "ʔuyuyəbil ti Allay",
+  "subtitles.entity.allay.hurt": "ʔubaʔkʷɬ ti Allay",
+  "subtitles.entity.allay.item_given": "ʔux̌ayəb ti Allay",
   "subtitles.entity.allay.item_taken": "Allay allays",
-  "subtitles.entity.allay.item_thrown": "pusildxʷəxʷ ti Allay",
-  "subtitles.entity.armor_stand.fall": "ʔuxʷit̕iləxʷ ti stab",
+  "subtitles.entity.allay.item_thrown": "ʔupusildxʷ ti Allay",
+  "subtitles.entity.armor_stand.fall": "ʔuxʷit̕il ti stab",
   "subtitles.entity.arrow.hit": "Arrow hits",
   "subtitles.entity.arrow.hit_player": "Player hit",
   "subtitles.entity.arrow.shoot": "Arrow fired",
   "subtitles.entity.axolotl.attack": "Axolotl attacks",
-  "subtitles.entity.axolotl.death": "yuyəbiləxʷ ti Axolotl",
+  "subtitles.entity.axolotl.death": "ʔuyuyəbil ti Axolotl",
   "subtitles.entity.axolotl.hurt": "Axolotl hurts",
   "subtitles.entity.axolotl.idle_air": "Axolotl chirps",
   "subtitles.entity.axolotl.idle_water": "Axolotl chirps",
   "subtitles.entity.axolotl.splash": "Axolotl splashes",
   "subtitles.entity.axolotl.swim": "Axolotl swims",
-  "subtitles.entity.bat.ambient": "č̓iq̓əxʷ ti qəbqəbayus",
-  "subtitles.entity.bat.death": "yuyəbil ti qəbqəbayus",
-  "subtitles.entity.bat.hurt": "baʔkʷdubəxʷ ti qəbqəbayus",
-  "subtitles.entity.bat.takeoff": "səsaq̓ʷəxʷ ti qəbqəbayus",
+  "subtitles.entity.bat.ambient": "ʔuč̓iq̓ ti qəbqəbayus",
+  "subtitles.entity.bat.death": "ʔuyuyəbil ti qəbqəbayus",
+  "subtitles.entity.bat.hurt": "ʔubaʔkʷɬ ti qəbqəbayus",
+  "subtitles.entity.bat.takeoff": "səsaq̓ʷ ti qəbqəbayus",
   "subtitles.entity.bee.ambient": "Bee buzzes",
   "subtitles.entity.bee.death": "yuyəbil ti Bee",
   "subtitles.entity.bee.hurt": "Bee hurts",
@@ -5499,8 +5499,8 @@
   "subtitles.entity.blaze.death": "Blaze dies",
   "subtitles.entity.blaze.hurt": "Blaze hurts",
   "subtitles.entity.blaze.shoot": "Blaze shoots",
-  "subtitles.entity.boat.paddle_land": "ʔišɬ",
-  "subtitles.entity.boat.paddle_water": "ʔišɬ",
+  "subtitles.entity.boat.paddle_land": "ʔuʔišɬ",
+  "subtitles.entity.boat.paddle_water": "ʔuʔišɬ",
   "subtitles.entity.camel.ambient": "Camel grunts",
   "subtitles.entity.camel.dash": "Camel yeets",
   "subtitles.entity.camel.dash_ready": "Camel recovers",
@@ -5514,10 +5514,10 @@
   "subtitles.entity.camel.step_sand": "Camel sands",
   "subtitles.entity.cat.ambient": "Cat meows",
   "subtitles.entity.cat.beg_for_food": "Cat begs",
-  "subtitles.entity.cat.death": "yuyəbiləxʷ ti pišpiš",
-  "subtitles.entity.cat.eat": "ʔəɬədəxʷ ti pišpiš",
+  "subtitles.entity.cat.death": "ʔuyuyəbil ti pišpiš",
+  "subtitles.entity.cat.eat": "ʔuʔəɬəd ti pišpiš",
   "subtitles.entity.cat.hiss": "Cat hisses",
-  "subtitles.entity.cat.hurt": "baʔkʷdubəxʷ ti pišpiš",
+  "subtitles.entity.cat.hurt": "ʔubaʔkʷɬ ti pišpiš",
   "subtitles.entity.cat.purr": "Cat purrs",
   "subtitles.entity.chicken.ambient": "Chicken clucks",
   "subtitles.entity.chicken.death": "Chicken dies",
@@ -5526,12 +5526,12 @@
   "subtitles.entity.cod.death": "Cod dies",
   "subtitles.entity.cod.flop": "Cod flops",
   "subtitles.entity.cod.hurt": "Cod hurts",
-  "subtitles.entity.cow.ambient": "busəxʷ ti qʷistCow moos",
-  "subtitles.entity.cow.death": "Cow dies",
-  "subtitles.entity.cow.hurt": "Cow hurts",
+  "subtitles.entity.cow.ambient": "ʔucut ti qʷist",
+  "subtitles.entity.cow.death": "ʔuyubil ti qʷist",
+  "subtitles.entity.cow.hurt": "ʔubaʔkʷɬ ti qʷist",
   "subtitles.entity.cow.milk": "Cow gets milked",
-  "subtitles.entity.creeper.death": "yubil ti Creeper",
-  "subtitles.entity.creeper.hurt": "baʔkʷdubəxʷ ti Creeper",
+  "subtitles.entity.creeper.death": "ʔuyubil ti Creeper",
+  "subtitles.entity.creeper.hurt": "ʔubaʔkʷɬ ti Creeper",
   "subtitles.entity.creeper.primed": "Creeper hisses",
   "subtitles.entity.dolphin.ambient": "Dolphin chirps",
   "subtitles.entity.dolphin.ambient_water": "Dolphin whistles",
@@ -5597,34 +5597,34 @@
   "subtitles.entity.fishing_bobber.retrieve": "Bobber retrieved",
   "subtitles.entity.fishing_bobber.splash": "Fishing Bobber splashes",
   "subtitles.entity.fishing_bobber.throw": "Bobber thrown",
-  "subtitles.entity.fox.aggro": "ʔəsx̌iciləxʷ ti sx̌ʷuʔx̌ʷuʔ",
+  "subtitles.entity.fox.aggro": "ʔəsx̌icil ti sx̌ʷuʔx̌ʷuʔ",
   "subtitles.entity.fox.ambient": "Fox squeaks",
   "subtitles.entity.fox.bite": "Fox bites",
-  "subtitles.entity.fox.death": "yuyəbiləxʷ ti sx̌ʷuʔx̌ʷuʔ",
-  "subtitles.entity.fox.eat": "ʔəɬədəxʷ ti sx̌ʷuʔx̌ʷuʔ",
-  "subtitles.entity.fox.hurt": "baʔkʷdubəxʷ ti sx̌ʷuʔx̌ʷuʔ",
+  "subtitles.entity.fox.death": "ʔuyuyəbil ti sx̌ʷuʔx̌ʷuʔ",
+  "subtitles.entity.fox.eat": "ʔuʔəɬəd ti sx̌ʷuʔx̌ʷuʔ",
+  "subtitles.entity.fox.hurt": "ʔubaʔkʷɬ ti sx̌ʷuʔx̌ʷuʔ",
   "subtitles.entity.fox.screech": "Fox screeches",
   "subtitles.entity.fox.sleep": "Fox snores",
   "subtitles.entity.fox.sniff": "Fox sniffs",
   "subtitles.entity.fox.spit": "Fox spits",
   "subtitles.entity.fox.teleport": "Fox teleports",
-  "subtitles.entity.frog.ambient": "Frog croaks",
-  "subtitles.entity.frog.death": "Frog dies",
-  "subtitles.entity.frog.eat": "ʔəɬədəxʷ ti waq̓waq̓",
-  "subtitles.entity.frog.hurt": "baʔkʷdubəxʷ ti waq̓waq̓",
-  "subtitles.entity.frog.lay_spawn": "Frog lays spawn",
-  "subtitles.entity.frog.long_jump": "saxʷəbəxʷ ti waq̓waq̓",
-  "subtitles.entity.generic.big_fall": "ʔuxʷit̕iləxʷ ti stab",
-  "subtitles.entity.generic.burn": "Burning",
-  "subtitles.entity.generic.death": "Dying",
-  "subtitles.entity.generic.drink": "qʷuʔqʷaʔəxʷ",
-  "subtitles.entity.generic.eat": "ʔəɬədəxʷ",
+  "subtitles.entity.frog.ambient": "ʔucut ti waq̓waq̓",
+  "subtitles.entity.frog.death": "ʔuyuyəbil ti waq̓waq̓",
+  "subtitles.entity.frog.eat": "ʔuʔəɬəd ti waq̓waq̓",
+  "subtitles.entity.frog.hurt": "ʔubaʔkʷɬ ti waq̓waq̓",
+  "subtitles.entity.frog.lay_spawn": "ʔuƛ̕alagʷil ti waq̓waq̓",
+  "subtitles.entity.frog.long_jump": "ʔusaxʷəb ti waq̓waq̓",
+  "subtitles.entity.generic.big_fall": "ʔuxʷit̕il ti stab",
+  "subtitles.entity.generic.burn": "ʔəsk̓ʷas",
+  "subtitles.entity.generic.death": "ʔuʔatəbəd",
+  "subtitles.entity.generic.drink": "ʔuqʷuʔqʷaʔ",
+  "subtitles.entity.generic.eat": "ʔuʔəɬəd",
   "subtitles.entity.generic.explode": "Explosion",
-  "subtitles.entity.generic.extinguish_fire": "Fire extinguishes",
-  "subtitles.entity.generic.hurt": "Something hurts",
-  "subtitles.entity.generic.small_fall": "Something trips",
+  "subtitles.entity.generic.extinguish_fire": "ʔuɬač̓",
+  "subtitles.entity.generic.hurt": "ʔubaʔkʷɬ",
+  "subtitles.entity.generic.small_fall": "ʔuɬik̓ʷqsšəd ti stab",
   "subtitles.entity.generic.splash": "Splashing",
-  "subtitles.entity.generic.swim": "Swimming",
+  "subtitles.entity.generic.swim": "ʔut̕ič̓ib",
   "subtitles.entity.ghast.ambient": "Ghast cries",
   "subtitles.entity.ghast.death": "Ghast dies",
   "subtitles.entity.ghast.hurt": "Ghast hurts",
@@ -5667,11 +5667,11 @@
   "subtitles.entity.horse.angry": "Horse neighs",
   "subtitles.entity.horse.armor": "Horse armor equips",
   "subtitles.entity.horse.breathe": "Horse breathes",
-  "subtitles.entity.horse.death": "yubiləxʷ ti stiqiw",
-  "subtitles.entity.horse.eat": "ʔəɬədəxʷ ti stiqiw",
-  "subtitles.entity.horse.gallop": "təlawiləxʷ ti stiqiw",
-  "subtitles.entity.horse.hurt": "baʔkʷdubəxʷ ti stiqiw",
-  "subtitles.entity.horse.jump": "saxʷəbəxʷ ti stiqiw",
+  "subtitles.entity.horse.death": "ʔuyubil ti stiqiw",
+  "subtitles.entity.horse.eat": "ʔuʔəɬəd ti stiqiw",
+  "subtitles.entity.horse.gallop": "ʔutəlawil ti stiqiw",
+  "subtitles.entity.horse.hurt": "ʔubaʔkʷɬ ti stiqiw",
+  "subtitles.entity.horse.jump": "ʔusaxʷəb ti stiqiw",
   "subtitles.entity.horse.saddle": "Saddle equips",
   "subtitles.entity.husk.ambient": "Husk groans",
   "subtitles.entity.husk.converted_to_zombie": "Husk converts to Zombie",
@@ -5829,11 +5829,11 @@
   "subtitles.entity.puffer_fish.flop": "Pufferfish flops",
   "subtitles.entity.puffer_fish.hurt": "Pufferfish hurts",
   "subtitles.entity.puffer_fish.sting": "Pufferfish stings",
-  "subtitles.entity.rabbit.ambient": "Rabbit squeaks",
+  "subtitles.entity.rabbit.ambient": "ʔuc̓iw̓c̓iw̓ ti k̓ʷəčəldiʔ",
   "subtitles.entity.rabbit.attack": "Rabbit attacks",
-  "subtitles.entity.rabbit.death": "Rabbit dies",
-  "subtitles.entity.rabbit.hurt": "Rabbit hurts",
-  "subtitles.entity.rabbit.jump": "Rabbit hops",
+  "subtitles.entity.rabbit.death": "ʔuyuyəbil ti k̓ʷəčəldiʔ",
+  "subtitles.entity.rabbit.hurt": "ʔubaʔkʷɬ ti k̓ʷəčəldiʔ",
+  "subtitles.entity.rabbit.jump": "ləsaʔsxʷəb ti k̓ʷəčəldiʔ",
   "subtitles.entity.ravager.ambient": "Ravager grunts",
   "subtitles.entity.ravager.attack": "Ravager bites",
   "subtitles.entity.ravager.celebrate": "Ravager cheers",
@@ -5915,8 +5915,8 @@
   "subtitles.entity.tropical_fish.flop": "Tropical Fish flops",
   "subtitles.entity.tropical_fish.hurt": "Tropical Fish hurts",
   "subtitles.entity.turtle.ambient_land": "Turtle chirps",
-  "subtitles.entity.turtle.death": "yuyəbiləxʷ ti ʔaləšək",
-  "subtitles.entity.turtle.death_baby": "yuyəbiləxʷ ti ʔal̕ʔaləšək",
+  "subtitles.entity.turtle.death": "ʔuyuyəbil ti ʔaləšək",
+  "subtitles.entity.turtle.death_baby": "ʔuyuyəbil ti ʔal̕ʔaləšək",
   "subtitles.entity.turtle.egg_break": "Turtle Egg breaks",
   "subtitles.entity.turtle.egg_crack": "Turtle Egg cracks",
   "subtitles.entity.turtle.egg_hatch": "Turtle Egg hatches",
@@ -5932,16 +5932,16 @@
   "subtitles.entity.vex.hurt": "Vex hurts",
   "subtitles.entity.villager.ambient": "Villager mumbles",
   "subtitles.entity.villager.celebrate": "Villager cheers",
-  "subtitles.entity.villager.death": "Villager dies",
+  "subtitles.entity.villager.death": "ʔuʔatəbəd ti Villager",
   "subtitles.entity.villager.hurt": "Villager hurts",
-  "subtitles.entity.villager.no": "lilayucidəxʷ ti Villager",
+  "subtitles.entity.villager.no": "ʔulilayucid ti Villager",
   "subtitles.entity.villager.trade": "Villager trades",
   "subtitles.entity.villager.work_armorer": "Armorer works",
   "subtitles.entity.villager.work_butcher": "Butcher works",
   "subtitles.entity.villager.work_cartographer": "Cartographer works",
   "subtitles.entity.villager.work_cleric": "Cleric works",
-  "subtitles.entity.villager.work_farmer": "Farmer works",
-  "subtitles.entity.villager.work_fisherman": "Fisherman works",
+  "subtitles.entity.villager.work_farmer": "ʔuyayus ti dxʷspədalikʷ",
+  "subtitles.entity.villager.work_fisherman": "ʔuyayus ti dxʷsɬiʔɬt̕iac̓",
   "subtitles.entity.villager.work_fletcher": "Fletcher works",
   "subtitles.entity.villager.work_leatherworker": "Leatherworker works",
   "subtitles.entity.villager.work_librarian": "Librarian works",
@@ -5949,7 +5949,7 @@
   "subtitles.entity.villager.work_shepherd": "Shepherd works",
   "subtitles.entity.villager.work_toolsmith": "Toolsmith works",
   "subtitles.entity.villager.work_weaponsmith": "Weaponsmith works",
-  "subtitles.entity.villager.yes": "ƛ̕ubadəxʷ ti Villager",
+  "subtitles.entity.villager.yes": "ʔuƛ̕ubad ti Villager",
   "subtitles.entity.vindicator.ambient": "Vindicator mutters",
   "subtitles.entity.vindicator.celebrate": "Vindicator cheers",
   "subtitles.entity.vindicator.death": "Vindicator dies",
@@ -5993,17 +5993,17 @@
   "subtitles.entity.wither_skeleton.ambient": "Wither Skeleton rattles",
   "subtitles.entity.wither_skeleton.death": "Wither Skeleton dies",
   "subtitles.entity.wither_skeleton.hurt": "Wither Skeleton hurts",
-  "subtitles.entity.wither.ambient": "ʔəsx̌iciləxʷ ti Wither",
-  "subtitles.entity.wither.death": "yubiləxʷ ti Wither",
-  "subtitles.entity.wither.hurt": "baʔkʷdubəxʷ ti Wither",
+  "subtitles.entity.wither.ambient": "ʔəsx̌icil ti Wither",
+  "subtitles.entity.wither.death": "ʔuyubil ti Wither",
+  "subtitles.entity.wither.hurt": "baʔkʷɬ ti Wither",
   "subtitles.entity.wither.shoot": "Wither attacks",
   "subtitles.entity.wither.spawn": "Wither released",
   "subtitles.entity.wolf.ambient": "Wolf pants",
-  "subtitles.entity.wolf.death": "yuyəbiləxʷ ti stiqayuʔ",
-  "subtitles.entity.wolf.growl": "Wolf growls",
-  "subtitles.entity.wolf.hurt": "baʔkʷdubəxʷ ti stiqayuʔ",
-  "subtitles.entity.wolf.shake": "Wolf shakes",
-  "subtitles.entity.zoglin.ambient": "Zoglin growls",
+  "subtitles.entity.wolf.death": "ʔuyuyəbil ti stiqayuʔ",
+  "subtitles.entity.wolf.growl": "ʔubawəč ti stiqayuʔ",
+  "subtitles.entity.wolf.hurt": "ʔubaʔkʷɬ ti stiqayuʔ",
+  "subtitles.entity.wolf.shake": "ʔut̕ixʷicut ti stiqayuʔ",
+  "subtitles.entity.zoglin.ambient": "ʔubawəč ti Zoglin",
   "subtitles.entity.zoglin.angry": "Zoglin growls angrily",
   "subtitles.entity.zoglin.attack": "Zoglin attacks",
   "subtitles.entity.zoglin.death": "Zoglin dies",
